# internal/api/oas/oas_operations_gen.go
@@ -7,4 +7,5 @@ type OperationName = string
 
 const (
 	CreateTaskOperation OperationName = "CreateTask"
+	GetTaskOperation    OperationName = "GetTask"
 )
